samples/_failures_safe/1761297440_b36761_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d867726d.c: In function ‘main’:
./samples/SAFE/__tmp_d867726d.c:149:12: error: missing terminating " character
  149 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_d867726d.c:149:5: error: expected expression at end of input
  149 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_d867726d.c:149:5: error: expected declaration or statement at end of input
